# perpfunding

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  requirements.txt  streamlit_app.py
arb/: cli.py  collector.py  config.py  core.py  dexscreener.py  http.py  loris.py  spot.py  storage.py  timeutil.py
arb/venues/: __init__.py  aster.py  edgex.py  hyperliquid.py  kucoin.py
config/: spot_mapping.yaml
tests/: test_dexscreener.py  test_storage.py
tests/fixtures/: dexscreener_sample.json  funding_sample.json
